--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,7 @@
     padding: 0px;
     margin: 0;
     box-sizing: border-box;
-    
 }
-
 
 html {
     height: 100%;
@@ -16,10 +14,36 @@ body {
     font-family: 'Overpass Mono', monospace;
     background: #E9E5EA;
     margin: 0px 5px;
-    
+}
+
+.slide {
+    margin-top: 15px;
+    height: 40rem;
+    width: auto;
+    margin: 50px 100px; 
+}
+
+.carousel-item {
+    height: 40rem;
 }
 
 @media(min-width: 320px) {
+
+.contact-title {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.slide {
+    margin-top: 15px;
+    height: 25rem;
+    width: auto;
+    margin: 50px 10px; 
+}
+    
+.carousel-item {
+    height: 25rem;
+}    
 
 header {
     background: radial-gradient(#FFDFD3, #2b2e2b);
@@ -28,15 +52,12 @@ header {
     /*position: sticky;
     top: 0;*/
     height: 180px;
-   
 }
 
 .menu {
     display: flex;
     flex-direction: column;
-    align-items: center;    
-    
-    
+    align-items: center;       
 }
 
 .nav-a {
@@ -48,22 +69,18 @@ header {
     margin:  3.5px auto;
     padding: 2px;
     box-shadow: 2px 4px 13px 0 #000;
-    background: radial-gradient(#9c9c9c, white);
-    
+    background: radial-gradient(#9c9c9c, white);   
 }
 
 .nav-a:hover {
     background: #957DAD;
     color: white;
     border-radius: 8px;
-    
 }
 
 .nav-item {
     list-style: none;
-    font-size: 19px;
-    
-    
+    font-size: 19px;   
 }
    
 .logo {
@@ -77,9 +94,9 @@ header {
 }
 
 .flex-container {
-display: flex;
-flex-direction: column;
-justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .grid-container {
@@ -91,7 +108,6 @@ justify-content: center;
     "footer";
 }
 
-
 .cabecera{
     grid-area: cabecera;
 }
@@ -100,10 +116,9 @@ justify-content: center;
     grid-area: navbar;
     background: #E9E5EA;
     height: 150px;
-    position: sticky;
-    top: 0;
-    flex-basis: 100%;
-    
+    /*position: sticky;
+    top: 0;*/
+    flex-basis: 100%; 
 }
 
 .nav-flex {
@@ -111,10 +126,7 @@ justify-content: center;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    flex-basis: 100%;
-
-    
-
+    flex-basis: 100%; 
 }
 
 .section {
@@ -129,19 +141,17 @@ justify-content: center;
 
 section {
     color: #2b2e2b
-
 }
 
 .container {
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: space-evenly;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .cajita-der {
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScdvqstA_vTk1yjZvcVykBYPzrdB7-l-Tj9g&usqp=CAU);
-    
     display: flex;
     margin-top: 50px;
     align-items: center;
@@ -155,13 +165,10 @@ justify-content: space-evenly;
     padding: 30px;
     box-sizing: border-box;
     margin: 20 auto;
-
 }
-
 
 .cajita-izq {
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScdvqstA_vTk1yjZvcVykBYPzrdB7-l-Tj9g&usqp=CAU);
-
     display: flex;
     margin-top: 20px;
     align-items: center;
@@ -181,10 +188,8 @@ justify-content: space-evenly;
     width: 50%;
     height: auto;
     margin-top: 50px;
-    border-radius: 50%;
-    
+    border-radius: 50%;  
 }
-
 
 h1 {
     text-align: center;
@@ -218,30 +223,25 @@ footer p {
     font-size: 20px;
 }
     
-
 i {
-    font-size: 25px;
-            
+    font-size: 25px;         
 }
 
-footer a {
-    
+footer a {  
     color: inherit;
     padding: 5px;
     transition: 0.5s;
 }
         
 footer a:hover {
-    color: #957DAD;
-            
+    color: #957DAD;         
 }
 
 .indice {
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-wrap: nowrap;
-    
+    flex-wrap: nowrap;   
 }
 
 .indice-title {
@@ -254,7 +254,6 @@ footer a:hover {
     color: inherit;
     transition: 0.3s;
     font-size: 15px;
-    
 }
 
 .indice-a:hover {
@@ -272,8 +271,7 @@ footer a:hover {
 .indice-item {
     padding-top: 1px;
     margin-top: 2px;
-    font-size: 15px;
-    
+    font-size: 15px;  
 }
 
 .blog-img {
@@ -414,7 +412,6 @@ footer a:hover {
     min-width: 430px;
     max-height: 140px;
     min-height: 150px;*/  
-
 }
 
 .btn-enviar {
@@ -430,8 +427,7 @@ footer a:hover {
 }
 
 .btn-enviar:hover {
-    background: black;
-    
+    background: black;  
 }
 
 .mapa {
@@ -439,17 +435,25 @@ footer a:hover {
     height: 300px;
 }
 
-}
 
 @media (min-width: 1150px) {
+
+.slide {
+    margin-top: 15px;
+    height: 40rem;
+    width: auto;
+    margin: 50px 100px; 
+}
+    
+.carousel-item {
+    height: 40rem;
+}
 
 .nav-flex {    
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-evenly;
     width: 100%;
-    
-
 }
 
 .nav-a {
@@ -457,16 +461,13 @@ footer a:hover {
     margin-top: 0px;
     padding: 22px 80px;
     box-shadow: 10px 10px 20px 0 #000;
-    background-color: #9c9c9c;
-    
-    
+    background-color: #9c9c9c;  
 }
 
 .navbar {
     height: 70px;
     width: 100%;
-    background-color: #E9E5EA;
-    
+    background-color: #E9E5EA;   
 }
 
 .logo {
@@ -483,7 +484,6 @@ footer a:hover {
 
 footer {
     height: 75px;
-
 }
 
 .foto-producto {
@@ -513,8 +513,6 @@ footer {
     min-width: 530px;
     max-height: 140px;
     min-height: 150px; 
-
-
 }
 
 .btn-enviar {
@@ -531,11 +529,19 @@ footer {
 
 .btn-enviar:hover {
     background: black;
-    transform: scale(2);
-    
+    transform: scale(2);  
 }
 
+@media (min-width: 768px) and (max-width: 1100px) {
 
-
-
+    .slide {
+        margin-top: 15px;
+        height: 30rem;
+        width: auto;
+        margin: 50px 100px; 
+    }
+        
+    .carousel-item {
+        height: 30rem;
+    }
 }
