--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -3,9 +3,13 @@ $bannercolor: radial-gradient(#FFDFD3, #2b2e2b);
 $h1color: radial-gradient(#E9E5EA, #FFDFD3, #2b2e2b);
 $bgfooter: radial-gradient(#FFDFD3 55%, #2b2e2b);
 
-* {
+@mixin reset-pm {
     padding: 0px;
     margin: 0;
+}
+
+* {
+    @include reset-pm();
     box-sizing: border-box;
 }
 
@@ -39,7 +43,7 @@ html {
 
                 
 
-        img {
+        .logo {
             width: 150px;
             margin: 12px auto;
             transition: 0.5s;
@@ -154,7 +158,7 @@ section {
 
 
 
-    @media (min-width: 1150px) {
+@media (min-width: 1150px) {
 
     section {    
         grid-area: section;
@@ -203,13 +207,13 @@ section {
         align-items: center; 
     }
 
-    img {
+    .logo {
         width: 170px;
         margin: 2px auto;
         transition: 0.5s; 
     }
 
-    img:hover {
+    .logo:hover {
         transform: scale(1.1);
     }
     }
@@ -261,6 +265,17 @@ nav {
     }
     }
 
+    .img-semifinal {
+        width: 20%;
+        margin-top: 50px;
+        margin-left: 30px;
+    }
+    
+    .img-final {
+        @extend .img-semifinal;
+    }
+    
+
     @import url(./_footer.scss);
 
     footer {
@@ -292,7 +307,7 @@ nav {
     }
     }
     
-    
+
     }
 
 
@@ -302,3 +317,38 @@ nav {
         border-radius: 8px;
         transform: scale(1.2);
     }
+
+.metodo-pago {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    a{
+    text-decoration: none;
+    color: inherit;
+
+        .icono-pago {
+            margin: 10px 20px 20px 20px;
+            font-size: 50px;
+            
+        }
+    }
+}
+
+.title-pago {
+    text-align: center;
+    margin-top: 80px;
+}
+
+$medios-pago: (
+    Paypal: coral,
+    Credito: blue,
+    Efectivo: grey
+);
+@each $nombre, $valor in $medios-pago {
+    .icono-pago#{$nombre} {
+        color: $valor;
+
+    }
+    
+}
